# rust-prod-example

./: .env  .env.sample  Cargo.toml  docker-compose.yml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
